--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "gsap": "^3.13.0",
     "leva": "^0.10.0",
     "next": "15.5.4",
-    "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.180.0",
     "three-stdlib": "^2.36.0"
   },
