--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.13.0",
     "leva": "^0.10.0",
     "next": "15.5.4",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "split-type": "^0.3.4",
     "three": "^0.180.0",
     "three-stdlib": "^2.36.0"
   },
