--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.13.0",
     "leva": "^0.10.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
